Prep documentation with couscous